[package]
name = "slog"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
serialport = "4.2.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
